DS-131 (etc): various interdependent fixes to header focus states and alignment (#145)
* fix various focus state issues

* mobile main menu focus state

* remove double-border before search

---------

--- a/src/lbcamden/components/header/includes/_toggle-button.scss
+++ b/src/lbcamden/components/header/includes/_toggle-button.scss
@@ -30,19 +30,15 @@
     @include lbcamden-chevron($header-text-colour, 90);
   }
 
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 20%;
-    right: 0;
-    width: 1px;
-    height: 60%;
-    background: $header-target-indicator-colour;
-  }
-
   &--no-search:after {
     display: none;
+  }
+
+  &:focus,
+  &:focus-visible {
+    &:before {
+      @include lbcamden-chevron(lbcamden-colour("black"), 90);
+    }
   }
 
   &:focus-visible {
@@ -56,12 +52,8 @@
       color: $govuk-focus-text-colour;
 
       &:before {
-        @include lbcamden-chevron($header-text-colour, 90);
+        @include lbcamden-chevron(lbcamden-colour("black"), 90);
       }
-    }
-
-    &:before {
-      @include lbcamden-chevron($header-text-colour, 90);
     }
   }
 
